--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Bhaduli</title>
+    <title> Self Help Group</title>
   </head>
   <body>
       <div id="root"></div>
